[FIX][TAS-184] Fix border-left on event details overflowing into event list section

--- a/desparchado/frontend/styles/sections/_event-details.scss
+++ b/desparchado/frontend/styles/sections/_event-details.scss
@@ -127,7 +127,7 @@ $mobile-actions-overlap: -3.75rem;
     align-items: flex-start;
     gap: 0;
     padding: 0;
-    height: 100%;
+    height: auto;
     justify-content: flex-end;
     width: 100%;
 
